--- a/style.css
+++ b/style.css
@@ -87,10 +87,31 @@ body {
     width: 95%;
     margin: auto;
     margin-bottom: 2%;
+    overflow: hidden;
+    align-items: center;
 }
 
-#comedy img, #thriller img, #horror img, #best-rated img {
-    margin-left: .5%;
+#content-best-rated, #content-horror, #content-thriller, #content-comedy {
+    display: flex;
+    position: relative;
+    left: 0px;
+    transition: all 0.7s ease;
+    width: 95%;
+}
+
+.btn-left, .btn-right {
+    margin-right: 5%;
+    margin-top: 2%;
+    background-color: #13649F;
+    border: 0;
+    color: white;
+    padding: .8%;
+    transition: background-color 0.4s ease-out;
+    border-radius: 8px;
+}
+
+.btn-left:hover, .btn-right:hover {
+    background-color: #1784D6;
 }
 
 /* FOOTER */
@@ -125,11 +146,19 @@ body {
 
 /* TEST */
 
-.container {
-    visibility: hidden;
+.informations {
+    display: flex;
+    color: white;
 }
 
-.container .overlay {
+.informations img {
+    margin-right: 2%;
+    width: 30%;
+}
+.modal {
+    visibility: hidden;
+}
+.modal .overlay {
     position: fixed;
     top:0;
     width: 100%;
@@ -137,21 +166,86 @@ body {
     background-color: #333333d3;
 }
 
-.container .content {
-    background-color: white;
-    position: absolute;
-    top: 40%;
-    left: 20%;
-    width: 60%;
-    padding: 1%;
+.modal .content {
+    padding: .5%;
+    background-color:#151A24;
+    border-radius: 8px;
+    position: fixed;
+    top: 30%;
+    left: 15%;
+    width: 70%;
 }
 
-.container .content .btn-close {
+.modal .content .btn-close {
     position: absolute;
+    top: 15px;
     right: 15px;
     padding: 1%;
-    background-color: red;
+    background-color: #13649F;
     border-radius: 5px;
     cursor: pointer;
     color: white;
+    border: 2px solid #13649F;
+    transition: background-color 0.4s ease-out;
+}
+
+.modal .content .btn-close:hover {
+    background-color: #1784D6;
+    border: 2px solid #1784D6;
+}
+
+
+/* TEST */
+
+.movie-container {
+    position: relative;
+    margin-bottom: 2%;
+    margin-left: 2%;
+    display: block;
+}
+
+.movie-container .movie-img {
+    width: 200px;
+    height: 300px;
+}
+
+.movie-container .movie-content {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    bottom: 0;
+    background-color: #333333d3;
+    transition: opacity 0.4s ease-out;
+}
+
+.movie-container .movie-content:hover {
+    opacity: 1;
+}
+
+.movie-container .movie-content h3 {
+    margin-top: 50%;
+    text-align: center;
+    color: white;
+    vertical-align: middle;
+}
+
+.movie-container .movie-content .movie-controls {
+    text-align: center;
+}
+
+.movie-container .movie-content .movie-controls button {
+    background-color: #13649F;
+    border: 0;
+    padding: 5%;
+    color: white;
+    border-radius: 8px;
+    transition: background-color 0.4s ease-out;
+    margin-right: 5%;
+}
+
+.movie-container .movie-content .movie-controls button:hover {
+    background-color: #1784D6;
 }
